Wed May  1 14:05:44 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* src/output.c (Output_ELF): Switch back to use EF_ARM_EABI_VER5
	after fix in elftoolchain.

Wed May  1 13:11:57 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* INSTALL: Update build and install instructions.

Wed May  1 00:41:47 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* src/output.c (Output_ELF): Restore ELF_EABI build.

Wed May  1 00:30:37 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* src/eval.c (Eval_Unop): Case eOp_CCEnc, return 4 bit CC value in
 	bits 28-31 (incl).  Bug report by Ben Avison.
	* unittests/compare/core/operator_cc_encoding.s: Adjust test result.

Sun Apr 28 17:17:46 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* reloc.h (RelocOut): Update comments.
	* os.c (OS_GetCWD): Add.
	* os.h (OS_GetCWD): Likewise.
	* main.c (asasm_help): Add -G option explanation.
	(option_debug): Add.
	(main): Support -g option.
	* main.h (option_debug): Add.
	* output.c (shstrtab_t, DWARF_UserState_t, oDWUserStateP,
	shstrtab_add, shstrtab_finish, DWARF_Callback_CreateSection,
	DWARF_CreateAreasAndSections, DWARF_OutputSectionData, DWARF_Finish):
	Add.
	(Output_ELF): Add basic DWARF support.
	* Makefile.am (asasm_CFLAGS): Add __STDC_FORMAT_MACROS definition.
	(-pedantic): Remove.
	* area.c (Area_CreateDWARF): Add.
	* area.h (AREA_*): Make unsigned.
	(AREA_INT_DWARF): Add.
	(Area_IsDWARF, Area_CreateDWARF): Add.

Sun Apr 28 17:14:06 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* src/area.c (areaImage): Rename to..
	(Area_Resize): ...this.
	(Area_EnsureExtraSize): Follow areaImage rename.

Sun Apr 28 16:21:56 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* include.c (Include_Find): Use PATH_MAX from limits.h instead of
	MAXPATHLEN from sys/param.h or own definition.
	* output.c: Likewise.

Sun Apr 28 14:49:40 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* include.c (Include_Find): Drop inc parameter.
	* include.h (Include_Find): Likewise.